--- a/css/main.sass
+++ b/css/main.sass
@@ -102,7 +102,6 @@ body
           font-weight: bold
           background-color: #eee8d5
           border: 0.375vmin solid #333
-          width: 12vmin
           box-shadow: 0 0.375vmin 0.75vmin #333
           cursor: default
           opacity: 1
@@ -123,7 +122,6 @@ body
           font-weight: bold
           background-color: #eee8d5
           border: 0.375vmin solid #333
-          width: 12vmin
           box-shadow: 0 0.375vmin 0.75vmin #333
           cursor: default
 
@@ -237,12 +235,8 @@ fieldset[disabled] .btn-primary-simon:hover
 .btn-primary-simon.switched.focus,
 .btn-primary-simon.switched:focus,
 .btn-primary-simon.switched:hover,
-.btn-primary-simon.switched.active,
 .btn-primary-simon.switched:active,
 .open > .dropdown-toggle.btn-primary-simon.switched,
-.btn-primary-simon.switched.active.focus,
-.btn-primary-simon.switched.active:focus,
-.btn-primary-simon.switched.active:hover,
 .btn-primary-simon.switched:active.focus,
 .btn-primary-simon.switched:active:focus,
 .btn-primary-simon.switched:active:hover,
@@ -250,24 +244,31 @@ fieldset[disabled] .btn-primary-simon:hover
 .open > .dropdown-toggle.btn-primary-simon.switched:focus,
 .open > .dropdown-toggle.btn-primary-simon.switched:hover,
 .btn-primary-simon.switched.disabled,
-.btn-primary-simon.switched.disabled.active,
 .btn-primary-simon.switched.disabled.focus,
 .btn-primary-simon.switched.disabled:active,
 .btn-primary-simon.switched.disabled:focus,
 .btn-primary-simon.switched.disabled:hover,
 .btn-primary-simon.switched[disabled],
-.btn-primary-simon.switched[disabled].active,
 .btn-primary-simon.switched[disabled].focus,
 .btn-primary-simon.switched[disabled]:active,
 .btn-primary-simon.switched[disabled]:focus,
 .btn-primary-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-primary-simon.switched,
-fieldset[disabled] .btn-primary-simon.switched.active,
 fieldset[disabled] .btn-primary-simon.switched.focus,
 fieldset[disabled] .btn-primary-simon.switched:active,
 fieldset[disabled] .btn-primary-simon.switched:focus,
 fieldset[disabled] .btn-primary-simon.switched:hover
   background-color: #286090
+  cursor: default
+
+.btn-primary-simon.switched.active,
+.btn-primary-simon.switched.active.focus,
+.btn-primary-simon.switched.active:focus,
+.btn-primary-simon.switched.active:hover,
+.btn-primary-simon.switched.disabled.active,
+.btn-primary-simon.switched[disabled].active,
+fieldset[disabled] .btn-primary-simon.switched.active
+  background-color: #337ab7
   cursor: default
 
 .btn-success-simon
@@ -320,12 +321,8 @@ fieldset[disabled] .btn-success-simon:hover
 .btn-success-simon.switched.focus,
 .btn-success-simon.switched:focus,
 .btn-success-simon.switched:hover,
-.btn-success-simon.switched.active,
 .btn-success-simon.switched:active,
 .open > .dropdown-toggle.btn-success-simon.switched,
-.btn-success-simon.switched.active.focus,
-.btn-success-simon.switched.active:focus,
-.btn-success-simon.switched.active:hover,
 .btn-success-simon.switched:active.focus,
 .btn-success-simon.switched:active:focus,
 .btn-success-simon.switched:active:hover,
@@ -333,24 +330,31 @@ fieldset[disabled] .btn-success-simon:hover
 .open > .dropdown-toggle.btn-success-simon.switched:focus,
 .open > .dropdown-toggle.btn-success-simon.switched:hover,
 .btn-success-simon.switched.disabled,
-.btn-success-simon.switched.disabled.active,
 .btn-success-simon.switched.disabled.focus,
 .btn-success-simon.switched.disabled:active,
 .btn-success-simon.switched.disabled:focus,
 .btn-success-simon.switched.disabled:hover,
 .btn-success-simon.switched[disabled],
-.btn-success-simon.switched[disabled].active,
 .btn-success-simon.switched[disabled].focus,
 .btn-success-simon.switched[disabled]:active,
 .btn-success-simon.switched[disabled]:focus,
 .btn-success-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-success-simon.switched,
-fieldset[disabled] .btn-success-simon.switched.active,
 fieldset[disabled] .btn-success-simon.switched.focus,
 fieldset[disabled] .btn-success-simon.switched:active,
 fieldset[disabled] .btn-success-simon.switched:focus,
 fieldset[disabled] .btn-success-simon.switched:hover
   background-color: #449d44
+  cursor: default
+
+.btn-success-simon.switched.active,
+.btn-success-simon.switched.active.focus,
+.btn-success-simon.switched.active:focus,
+.btn-success-simon.switched.active:hover,
+.btn-success-simon.switched.disabled.active,
+.btn-success-simon.switched[disabled].active,
+fieldset[disabled] .btn-success-simon.switched.active
+  background-color: #5cb85c
   cursor: default
 
 .btn-warning-simon
@@ -403,12 +407,8 @@ fieldset[disabled] .btn-warning-simon:hover
 .btn-warning-simon.switched.focus,
 .btn-warning-simon.switched:focus,
 .btn-warning-simon.switched:hover,
-.btn-warning-simon.switched.active,
 .btn-warning-simon.switched:active,
 .open > .dropdown-toggle.btn-warning-simon.switched,
-.btn-warning-simon.switched.active.focus,
-.btn-warning-simon.switched.active:focus,
-.btn-warning-simon.switched.active:hover,
 .btn-warning-simon.switched:active.focus,
 .btn-warning-simon.switched:active:focus,
 .btn-warning-simon.switched:active:hover,
@@ -416,24 +416,31 @@ fieldset[disabled] .btn-warning-simon:hover
 .open > .dropdown-toggle.btn-warning-simon.switched:focus,
 .open > .dropdown-toggle.btn-warning-simon.switched:hover,
 .btn-warning-simon.switched.disabled,
-.btn-warning-simon.switched.disabled.active,
 .btn-warning-simon.switched.disabled.focus,
 .btn-warning-simon.switched.disabled:active,
 .btn-warning-simon.switched.disabled:focus,
 .btn-warning-simon.switched.disabled:hover,
 .btn-warning-simon.switched[disabled],
-.btn-warning-simon.switched[disabled].active,
 .btn-warning-simon.switched[disabled].focus,
 .btn-warning-simon.switched[disabled]:active,
 .btn-warning-simon.switched[disabled]:focus,
 .btn-warning-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-warning-simon.switched,
-fieldset[disabled] .btn-warning-simon.switched.active,
 fieldset[disabled] .btn-warning-simon.switched.focus,
 fieldset[disabled] .btn-warning-simon.switched:active,
 fieldset[disabled] .btn-warning-simon.switched:focus,
 fieldset[disabled] .btn-warning-simon.switched:hover
   background-color: #ec971f
+  cursor: default
+
+.btn-warning-simon.switched.active,
+.btn-warning-simon.switched.active.focus,
+.btn-warning-simon.switched.active:focus,
+.btn-warning-simon.switched.active:hover,
+.btn-warning-simon.switched.disabled.active,
+.btn-warning-simon.switched[disabled].active,
+fieldset[disabled] .btn-warning-simon.switched.active
+  background-color: #f0ad4e
   cursor: default
 
 .btn-danger-simon
@@ -486,12 +493,8 @@ fieldset[disabled] .btn-danger-simon:hover
 .btn-danger-simon.switched.focus,
 .btn-danger-simon.switched:focus,
 .btn-danger-simon.switched:hover,
-.btn-danger-simon.switched.active,
 .btn-danger-simon.switched:active,
 .open > .dropdown-toggle.btn-danger-simon.switched,
-.btn-danger-simon.switched.active.focus,
-.btn-danger-simon.switched.active:focus,
-.btn-danger-simon.switched.active:hover,
 .btn-danger-simon.switched:active.focus,
 .btn-danger-simon.switched:active:focus,
 .btn-danger-simon.switched:active:hover,
@@ -499,24 +502,31 @@ fieldset[disabled] .btn-danger-simon:hover
 .open > .dropdown-toggle.btn-danger-simon.switched:focus,
 .open > .dropdown-toggle.btn-danger-simon.switched:hover,
 .btn-danger-simon.switched.disabled,
-.btn-danger-simon.switched.disabled.active,
 .btn-danger-simon.switched.disabled.focus,
 .btn-danger-simon.switched.disabled:active,
 .btn-danger-simon.switched.disabled:focus,
 .btn-danger-simon.switched.disabled:hover,
 .btn-danger-simon.switched[disabled],
-.btn-danger-simon.switched[disabled].active,
 .btn-danger-simon.switched[disabled].focus,
 .btn-danger-simon.switched[disabled]:active,
 .btn-danger-simon.switched[disabled]:focus,
 .btn-danger-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-danger-simon.switched,
-fieldset[disabled] .btn-danger-simon.switched.active,
 fieldset[disabled] .btn-danger-simon.switched.focus,
 fieldset[disabled] .btn-danger-simon.switched:active,
 fieldset[disabled] .btn-danger-simon.switched:focus,
 fieldset[disabled] .btn-danger-simon.switched:hover
   background-color: #c9302c
+  cursor: default
+
+.btn-danger-simon.switched.active,
+.btn-danger-simon.switched.active.focus,
+.btn-danger-simon.switched.active:focus,
+.btn-danger-simon.switched.active:hover,
+.btn-danger-simon.switched.disabled.active,
+.btn-danger-simon.switched[disabled].active,
+fieldset[disabled] .btn-danger-simon.switched.active
+  background-color: #d9534f
   cursor: default
 
 .btn-default-switch
