--- a/css/main.css
+++ b/css/main.css
@@ -58,12 +58,24 @@ body {
     border-radius: 100%;
     top: 30vmin;
     border: 3vmin solid #333333;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center; }
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -ms-flex-line-pack: center;
+        -webkit-align-content: center;
+            align-content: center; }
     body .simon .middle .middle-well .well {
       margin-bottom: 0;
       width: 100%;
@@ -88,7 +100,6 @@ body {
         font-weight: bold;
         background-color: #eee8d5;
         border: 0.375vmin solid #333333;
-        width: 12vmin;
         box-shadow: 0 0.375vmin 0.75vmin #333333;
         cursor: default;
         opacity: 1; }
@@ -106,7 +117,6 @@ body {
         font-weight: bold;
         background-color: #eee8d5;
         border: 0.375vmin solid #333333;
-        width: 12vmin;
         box-shadow: 0 0.375vmin 0.75vmin #333333;
         cursor: default; }
       body .simon .middle .middle-top .middle-top-right.switched {
@@ -210,12 +220,8 @@ fieldset[disabled] .btn-primary-simon:hover {
 .btn-primary-simon.switched.focus,
 .btn-primary-simon.switched:focus,
 .btn-primary-simon.switched:hover,
-.btn-primary-simon.switched.active,
 .btn-primary-simon.switched:active,
 .open > .dropdown-toggle.btn-primary-simon.switched,
-.btn-primary-simon.switched.active.focus,
-.btn-primary-simon.switched.active:focus,
-.btn-primary-simon.switched.active:hover,
 .btn-primary-simon.switched:active.focus,
 .btn-primary-simon.switched:active:focus,
 .btn-primary-simon.switched:active:hover,
@@ -223,24 +229,31 @@ fieldset[disabled] .btn-primary-simon:hover {
 .open > .dropdown-toggle.btn-primary-simon.switched:focus,
 .open > .dropdown-toggle.btn-primary-simon.switched:hover,
 .btn-primary-simon.switched.disabled,
-.btn-primary-simon.switched.disabled.active,
 .btn-primary-simon.switched.disabled.focus,
 .btn-primary-simon.switched.disabled:active,
 .btn-primary-simon.switched.disabled:focus,
 .btn-primary-simon.switched.disabled:hover,
 .btn-primary-simon.switched[disabled],
-.btn-primary-simon.switched[disabled].active,
 .btn-primary-simon.switched[disabled].focus,
 .btn-primary-simon.switched[disabled]:active,
 .btn-primary-simon.switched[disabled]:focus,
 .btn-primary-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-primary-simon.switched,
-fieldset[disabled] .btn-primary-simon.switched.active,
 fieldset[disabled] .btn-primary-simon.switched.focus,
 fieldset[disabled] .btn-primary-simon.switched:active,
 fieldset[disabled] .btn-primary-simon.switched:focus,
 fieldset[disabled] .btn-primary-simon.switched:hover {
   background-color: #286090;
+  cursor: default; }
+
+.btn-primary-simon.switched.active,
+.btn-primary-simon.switched.active.focus,
+.btn-primary-simon.switched.active:focus,
+.btn-primary-simon.switched.active:hover,
+.btn-primary-simon.switched.disabled.active,
+.btn-primary-simon.switched[disabled].active,
+fieldset[disabled] .btn-primary-simon.switched.active {
+  background-color: #337ab7;
   cursor: default; }
 
 .btn-success-simon {
@@ -293,12 +306,8 @@ fieldset[disabled] .btn-success-simon:hover {
 .btn-success-simon.switched.focus,
 .btn-success-simon.switched:focus,
 .btn-success-simon.switched:hover,
-.btn-success-simon.switched.active,
 .btn-success-simon.switched:active,
 .open > .dropdown-toggle.btn-success-simon.switched,
-.btn-success-simon.switched.active.focus,
-.btn-success-simon.switched.active:focus,
-.btn-success-simon.switched.active:hover,
 .btn-success-simon.switched:active.focus,
 .btn-success-simon.switched:active:focus,
 .btn-success-simon.switched:active:hover,
@@ -306,24 +315,31 @@ fieldset[disabled] .btn-success-simon:hover {
 .open > .dropdown-toggle.btn-success-simon.switched:focus,
 .open > .dropdown-toggle.btn-success-simon.switched:hover,
 .btn-success-simon.switched.disabled,
-.btn-success-simon.switched.disabled.active,
 .btn-success-simon.switched.disabled.focus,
 .btn-success-simon.switched.disabled:active,
 .btn-success-simon.switched.disabled:focus,
 .btn-success-simon.switched.disabled:hover,
 .btn-success-simon.switched[disabled],
-.btn-success-simon.switched[disabled].active,
 .btn-success-simon.switched[disabled].focus,
 .btn-success-simon.switched[disabled]:active,
 .btn-success-simon.switched[disabled]:focus,
 .btn-success-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-success-simon.switched,
-fieldset[disabled] .btn-success-simon.switched.active,
 fieldset[disabled] .btn-success-simon.switched.focus,
 fieldset[disabled] .btn-success-simon.switched:active,
 fieldset[disabled] .btn-success-simon.switched:focus,
 fieldset[disabled] .btn-success-simon.switched:hover {
   background-color: #449d44;
+  cursor: default; }
+
+.btn-success-simon.switched.active,
+.btn-success-simon.switched.active.focus,
+.btn-success-simon.switched.active:focus,
+.btn-success-simon.switched.active:hover,
+.btn-success-simon.switched.disabled.active,
+.btn-success-simon.switched[disabled].active,
+fieldset[disabled] .btn-success-simon.switched.active {
+  background-color: #5cb85c;
   cursor: default; }
 
 .btn-warning-simon {
@@ -376,12 +392,8 @@ fieldset[disabled] .btn-warning-simon:hover {
 .btn-warning-simon.switched.focus,
 .btn-warning-simon.switched:focus,
 .btn-warning-simon.switched:hover,
-.btn-warning-simon.switched.active,
 .btn-warning-simon.switched:active,
 .open > .dropdown-toggle.btn-warning-simon.switched,
-.btn-warning-simon.switched.active.focus,
-.btn-warning-simon.switched.active:focus,
-.btn-warning-simon.switched.active:hover,
 .btn-warning-simon.switched:active.focus,
 .btn-warning-simon.switched:active:focus,
 .btn-warning-simon.switched:active:hover,
@@ -389,24 +401,31 @@ fieldset[disabled] .btn-warning-simon:hover {
 .open > .dropdown-toggle.btn-warning-simon.switched:focus,
 .open > .dropdown-toggle.btn-warning-simon.switched:hover,
 .btn-warning-simon.switched.disabled,
-.btn-warning-simon.switched.disabled.active,
 .btn-warning-simon.switched.disabled.focus,
 .btn-warning-simon.switched.disabled:active,
 .btn-warning-simon.switched.disabled:focus,
 .btn-warning-simon.switched.disabled:hover,
 .btn-warning-simon.switched[disabled],
-.btn-warning-simon.switched[disabled].active,
 .btn-warning-simon.switched[disabled].focus,
 .btn-warning-simon.switched[disabled]:active,
 .btn-warning-simon.switched[disabled]:focus,
 .btn-warning-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-warning-simon.switched,
-fieldset[disabled] .btn-warning-simon.switched.active,
 fieldset[disabled] .btn-warning-simon.switched.focus,
 fieldset[disabled] .btn-warning-simon.switched:active,
 fieldset[disabled] .btn-warning-simon.switched:focus,
 fieldset[disabled] .btn-warning-simon.switched:hover {
   background-color: #ec971f;
+  cursor: default; }
+
+.btn-warning-simon.switched.active,
+.btn-warning-simon.switched.active.focus,
+.btn-warning-simon.switched.active:focus,
+.btn-warning-simon.switched.active:hover,
+.btn-warning-simon.switched.disabled.active,
+.btn-warning-simon.switched[disabled].active,
+fieldset[disabled] .btn-warning-simon.switched.active {
+  background-color: #f0ad4e;
   cursor: default; }
 
 .btn-danger-simon {
@@ -459,12 +478,8 @@ fieldset[disabled] .btn-danger-simon:hover {
 .btn-danger-simon.switched.focus,
 .btn-danger-simon.switched:focus,
 .btn-danger-simon.switched:hover,
-.btn-danger-simon.switched.active,
 .btn-danger-simon.switched:active,
 .open > .dropdown-toggle.btn-danger-simon.switched,
-.btn-danger-simon.switched.active.focus,
-.btn-danger-simon.switched.active:focus,
-.btn-danger-simon.switched.active:hover,
 .btn-danger-simon.switched:active.focus,
 .btn-danger-simon.switched:active:focus,
 .btn-danger-simon.switched:active:hover,
@@ -472,24 +487,31 @@ fieldset[disabled] .btn-danger-simon:hover {
 .open > .dropdown-toggle.btn-danger-simon.switched:focus,
 .open > .dropdown-toggle.btn-danger-simon.switched:hover,
 .btn-danger-simon.switched.disabled,
-.btn-danger-simon.switched.disabled.active,
 .btn-danger-simon.switched.disabled.focus,
 .btn-danger-simon.switched.disabled:active,
 .btn-danger-simon.switched.disabled:focus,
 .btn-danger-simon.switched.disabled:hover,
 .btn-danger-simon.switched[disabled],
-.btn-danger-simon.switched[disabled].active,
 .btn-danger-simon.switched[disabled].focus,
 .btn-danger-simon.switched[disabled]:active,
 .btn-danger-simon.switched[disabled]:focus,
 .btn-danger-simon.switched[disabled]:hover,
 fieldset[disabled] .btn-danger-simon.switched,
-fieldset[disabled] .btn-danger-simon.switched.active,
 fieldset[disabled] .btn-danger-simon.switched.focus,
 fieldset[disabled] .btn-danger-simon.switched:active,
 fieldset[disabled] .btn-danger-simon.switched:focus,
 fieldset[disabled] .btn-danger-simon.switched:hover {
   background-color: #c9302c;
+  cursor: default; }
+
+.btn-danger-simon.switched.active,
+.btn-danger-simon.switched.active.focus,
+.btn-danger-simon.switched.active:focus,
+.btn-danger-simon.switched.active:hover,
+.btn-danger-simon.switched.disabled.active,
+.btn-danger-simon.switched[disabled].active,
+fieldset[disabled] .btn-danger-simon.switched.active {
+  background-color: #d9534f;
   cursor: default; }
 
 .btn-default-switch {
@@ -634,7 +656,6 @@ fieldset[disabled] .btn-danger-switch:hover {
 .btn-no-shadow:active {
   background-image: none;
   outline: 0;
-  -webkit-box-shadow: none;
   box-shadow: none; }
 
 .btn-group-vertical > .btn.active,
@@ -648,7 +669,15 @@ fieldset[disabled] .btn-danger-switch:hover {
   z-index: 0; }
 
 .blink {
-  animation: blink 0.5s ease 2; }
+  -webkit-animation: blink 0.5s ease 2;
+          animation: blink 0.5s ease 2; }
+
+@-webkit-keyframes blink {
+  0% {
+    color: #32050c; }
+
+  50% {
+    color: #dc0d29; } }
 
 @keyframes blink {
   0% {
